[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "cython",              # If needed for the TTS library
    "numpy",               # Common requirement for many libraries
    "torch==2.4.1",          # Ensure the correct version of PyTorch
]
build-backend = "setuptools.build_meta"

[project]
name = "YourProjectName"
version = "0.1.0"
description = "A Streamlit project using TTS and transformers"
authors = [{name = "Your Name", email = "your.email@example.com"}]
dependencies = [
    "streamlit==1.38.0",
    "torch==2.4.1",    # CUDA 12.1 support
    "transformers==4.45.1",
    "openai==1.35.14",
    "audio-recorder-streamlit==0.0.10",
    "TTS @ git+https://github.com/coqui-ai/TTS@dbf1a08a0d4e47fdad6172e433eeb34bc6b13b4e"
]
